--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </h1>
             
             <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">
-              <span class="text-dark">Photographer</span>
+              <span class="text-dark">Admin & Photographer</span>
             </h2>
             
 
